[package]
name = "tl-proto"
description = "A collection of traits for working with TL serialization/deserialization"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/tl-proto"
version = "0.3.10"
edition = "2021"
include = ["src/**/*.rs", "README.md"]
license = "MIT"

[workspace]
members = ["proc", "test_suite", "scheme"]

[dependencies]
bytes = { version = "1.1", optional = true }
digest = "0.9.0"
sha2 = { version = "0.9.9", optional = true }
smallvec = { version = "1.7", features = ["union", "const_generics"] }
thiserror = "1.0"

tl-proto-proc = { version = "=0.3.9", path = "proc", optional = true }

[features]
default = ["derive", "bytes", "hash"]
derive = ["tl-proto-proc"]
hash = ["sha2"]
