[package]
name = "tl-proto-proc"
description = "A collection of traits for working with TL serialization/deserialization"
repository = "https://github.com/broxus/tl-proto"
version = "0.1.10"
edition = "2021"
include = ["src/**/*.rs", "../README.md", "../LICENSE"]
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["visit"] }
quote = "1.0"
