[package]
name = "tl-proto-proc"
description = "A collection of traits for working with TL serialization/deserialization"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/tl-proto"
version = "0.5.1"
edition = "2021"
include = ["src/**/*.rs", "../README.md"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.87"
quote = "1.0"
rustc-hash = "2.1.0"
syn = { version = "2.0", features = ["visit"] }
tl-scheme = { version = "0.2.2", path = "../scheme" }
