[package]
name = "tl-scheme"
description = "TL language grammar"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/tl-proto"
version = "0.1.2"
edition = "2021"
include = ["src/**/*.rs", "src/tl.pest", "README.md"]
license = "MIT"

[dependencies]
crc = "2"
pest = "2.1"
pest_derive = "2.1"
rustc-hash = "1.1.0"
thiserror = "1.0"
